force-app/main/default/objects/Proposal__c/fields/Implementation_Step__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Step__c</fullName>
    <description>Implementation Steps</description>
    <formula>TEXT(Opportunity__r.Implementation__r.Implementation_Steps__c)</formula>
    <inlineHelpText>Implementation Steps</inlineHelpText>
    <label>Implementation Step</label>
    <type>Text</type>
</CustomField>