force-app/main/default/objects/Proposal__c/fields/Include_Company_in_UBQT_Plan__c.field-meta.xml
<CustomField>
    <fullName>Include_Company_in_UBQT_Plan__c</fullName>
    <description>Will this company be included in the plan? Ubiquity is not responsible for combined testing.</description>
    <inlineHelpText>Will this company be included in the plan? Ubiquity is not responsible for combined testing.</inlineHelpText>
    <label>Include Company in UBQT Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>