force-app/main/default/objects/Proposal__c/fields/Insurance_Agency_NPN__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agency_NPN__c</fullName>
    <label>Insurance Agency NPN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>