force-app/main/default/objects/Proposal__c/fields/Introductory_Fee__c.field-meta.xml
<CustomField>
    <fullName>Introductory_Fee__c</fullName>
    <label>Introductory Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>