force-app/main/default/objects/Proposal__c/fields/isCalloutTriggered__c.field-meta.xml
<CustomField>
    <fullName>isCalloutTriggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCalloutTriggered</label>
    <type>Checkbox</type>
</CustomField>