force-app/main/default/objects/Proposal__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MML</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>