force-app/main/default/objects/Proposal__c/fields/Legal_Proceeding_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Legal_Proceeding_Explanation__c</fullName>
    <description>Explain the nature of the legal proceeding(s)</description>
    <inlineHelpText>Explain the nature of the legal proceeding(s)</inlineHelpText>
    <label>Legal Proceeding Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>