force-app/main/default/objects/Proposal__c/fields/Loans__c.field-meta.xml
<CustomField>
    <fullName>Loans__c</fullName>
    <label>Loans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>