force-app/main/default/objects/Proposal__c/fields/Longer_than_12_Months_with_Zero_Assets__c.field-meta.xml
<CustomField>
    <fullName>Longer_than_12_Months_with_Zero_Assets__c</fullName>
    <description>Has it been longer than 12 months since the plan has had zero assets?</description>
    <inlineHelpText>Has it been longer than 12 months since the plan has had zero assets?</inlineHelpText>
    <label>Longer than 12 Months with Zero Assets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>