force-app/main/default/objects/Proposal__c/fields/Manual_Callout__c.field-meta.xml
<CustomField>
    <fullName>Manual_Callout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Callout</label>
    <type>Checkbox</type>
</CustomField>