force-app/main/default/objects/Proposal__c/fields/Master_Advisor_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Advisor_Account__c</fullName>
    <formula>Advisor_Account__r.Master_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Advisor Account</label>
    <type>Text</type>
</CustomField>