force-app/main/default/objects/Proposal__c/fields/Max_Auto_Deferral_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Max_Auto_Deferral_Percentage__c</fullName>
    <label>Max Auto Deferral Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>