force-app/main/default/objects/Proposal__c/fields/MML_Form_Values__c.field-meta.xml
<CustomField>
    <fullName>MML_Form_Values__c</fullName>
    <description>Will be used to track entered values from the Jotform for MML Plans</description>
    <label>MML Form Values</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>