force-app/main/default/objects/Proposal__c/fields/Number_of_HCE_s__c.field-meta.xml
<CustomField>
    <fullName>Number_of_HCE_s__c</fullName>
    <description>Number of Highly Compensated Employees</description>
    <inlineHelpText>Number of Highly Compensated Employees</inlineHelpText>
    <label>Number of HCE&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>