force-app/main/default/objects/Proposal__c/fields/Number_of_Non_Owner_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Non_Owner_Employees__c</fullName>
    <label>Number of Non-Owner Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>