force-app/main/default/objects/Proposal__c/fields/Older_Than_3_Years__c.field-meta.xml
<CustomField>
    <fullName>Older_Than_3_Years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Older Than 3 Years</label>
    <type>Checkbox</type>
</CustomField>