force-app/main/default/objects/Proposal__c/fields/OPD_Notes__c.field-meta.xml
<CustomField>
    <fullName>OPD_Notes__c</fullName>
    <description>Copied from the Opp Notes field</description>
    <inlineHelpText>Copied from the Opp Notes field</inlineHelpText>
    <label>OPD Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>