force-app/main/default/objects/Proposal__c/fields/OPD_Status__c.field-meta.xml
<CustomField>
    <fullName>OPD_Status__c</fullName>
    <label>OPD Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>