force-app/main/default/objects/Proposal__c/fields/Original_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Effective_Date__c</fullName>
    <description>Original Effective Date for Conversion Plans</description>
    <inlineHelpText>Original Effective Date for Conversion Plans</inlineHelpText>
    <label>Original Effective Date</label>
    <type>Date</type>
</CustomField>