force-app/main/default/objects/Proposal__c/fields/Ownership_Override__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Override assignment automation.</description>
    <inlineHelpText>Used to Override assignment automation.</inlineHelpText>
    <label>Ownership Override</label>
    <type>Checkbox</type>
</CustomField>