force-app/main/default/objects/Proposal__c/fields/Paradigm_Purchase_Link__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Purchase_Link__c</fullName>
    <label>Paradigm Purchase Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>