force-app/main/default/objects/Proposal__c/fields/Part_of_Controlled_or_Affiliated_Group__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Controlled_or_Affiliated_Group__c</fullName>
    <description>Is your plan a part of a controlled or affiliated service group?</description>
    <inlineHelpText>Is your plan a part of a controlled or affiliated service group?</inlineHelpText>
    <label>Part of Controlled or Affiliated Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>