force-app/main/default/objects/Proposal__c/fields/Participant_Fee_Payment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Fee_Payment__c</fullName>
    <label>Participant Fee Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>