force-app/main/default/objects/Proposal__c/fields/Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Provider__c</fullName>
    <description>Will be used to capture Payroll Provider info from Jotform</description>
    <inlineHelpText>Will be used to capture Payroll Provider info from Jotform</inlineHelpText>
    <label>Payroll Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>