force-app/main/default/objects/Proposal__c/fields/Pending_Alert__c.field-meta.xml
<CustomField>
    <fullName>Pending_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Alert</label>
    <type>Checkbox</type>
</CustomField>