force-app/main/default/objects/Proposal__c/fields/Permissible_Withdrawal_Days__c.field-meta.xml
<CustomField>
    <fullName>Permissible_Withdrawal_Days__c</fullName>
    <label>Permissible Withdrawal Days</label>
    <length>4</length>
    <type>Text</type>
</CustomField>