force-app/main/default/objects/Proposal__c/fields/Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Effective_Date__c</fullName>
    <label>Plan Effective Date</label>
    <type>Date</type>
</CustomField>