force-app/main/default/objects/Proposal__c/fields/Plan_Entry_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Plan_Entry_Frequency__c</fullName>
    <label>Plan Entry Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>