force-app/main/default/objects/Proposal__c/fields/Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Plan_ID__c</fullName>
    <label>Plan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>