force-app/main/default/objects/Proposal__c/fields/Plan_ID_First_Synced__c.field-meta.xml
<CustomField>
    <fullName>Plan_ID_First_Synced__c</fullName>
    <label>Plan ID First Synced</label>
    <type>Date</type>
</CustomField>