force-app/main/default/objects/Proposal__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <description>Original Plan name for conversion plans</description>
    <inlineHelpText>Original Plan name for conversion plans</inlineHelpText>
    <label>Plan Name</label>
    <type>TextArea</type>
</CustomField>