force-app/main/default/objects/Proposal__c/fields/Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Number__c</fullName>
    <description>How many plans have existed for this company? Format 002</description>
    <inlineHelpText>How many plans have existed for this company? Format 002</inlineHelpText>
    <label>Plan Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>