force-app/main/default/objects/Proposal__c/fields/Portfolio_Code__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Code__c</fullName>
    <label>Portfolio Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>