force-app/main/default/objects/Proposal__c/fields/Previous_Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Plan_Effective_Date__c</fullName>
    <label>Previous Plan Effective Date</label>
    <type>Date</type>
</CustomField>