force-app/main/default/objects/Proposal__c/fields/Previously_Sponsored_401_k_Plan__c.field-meta.xml
<CustomField>
    <fullName>Previously_Sponsored_401_k_Plan__c</fullName>
    <description>Have you previously sponsored a 401(k) plan?</description>
    <inlineHelpText>Have you previously sponsored a 401(k) plan?</inlineHelpText>
    <label>Previously Sponsored 401(k) Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>