force-app/main/default/objects/Proposal__c/fields/Pricing_Origin__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For simply proposals.  If checked, indicates that the proposal originated as a &quot;Pricing&quot; proposal, not full plan proposal.  Should remain checked on pricing proposals that have converted to &quot;Provisions&quot;.</description>
    <label>Pricing Origin</label>
    <type>Checkbox</type>
</CustomField>