force-app/main/default/objects/Proposal__c/fields/Primary_Advisor_18_Char_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Advisor_18_Char_Id__c</fullName>
    <description>18 character id for the contact listed as the Advisor Contact</description>
    <formula>Advisor_Contact__r.Contact_ID_18_Char__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Advisor (18 Char Id)</label>
    <type>Text</type>
</CustomField>