force-app/main/default/objects/Proposal__c/fields/Principal_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Principal_Account_Id__c</fullName>
    <label>Principal Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>