force-app/main/default/objects/Proposal__c/fields/Principal_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Principal_Client_Id__c</fullName>
    <label>Principal Client Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>