force-app/main/default/objects/Proposal__c/fields/Principal_Id__c.field-meta.xml
<CustomField>
    <fullName>Principal_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Principal Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>