force-app/main/default/objects/Proposal__c/fields/Principal_Opportunity_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Principal_Opportunity_Closed_Lost_Reason__c</fullName>
    <label>Principal Opportunity Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Case Not Taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>