force-app/main/default/objects/Proposal__c/fields/Principal_TPA_Id__c.field-meta.xml
<CustomField>
    <fullName>Principal_TPA_Id__c</fullName>
    <label>Principal TPA Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>