force-app/main/default/objects/Proposal__c/fields/Prior_Year_Profit_Sharing_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Profit_Sharing_Contribution__c</fullName>
    <description>Will the client fund a prior year profit sharing contribution</description>
    <label>Prior Year Profit Sharing Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>