force-app/main/default/objects/Proposal__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Express IRA</fullName>
            </value>
            <value>
                <fullName>Single IRA</fullName>
            </value>
            <value>
                <fullName>Simple IRA</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Plan Amendment</fullName>
            </value>
            <value>
                <fullName>Add-On Product</fullName>
            </value>
            <value>
                <fullName>Product Downgrade</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>