force-app/main/default/objects/Proposal__c/fields/Profit_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing__c</fullName>
    <label>Profit Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pro Rata</fullName>
            </value>
            <value>
                <fullName>Permitted Disparity</fullName>
            </value>
            <value>
                <fullName>New Comparability</fullName>
            </value>
            <value>
                <fullName>6-Year Graded</fullName>
                <isActive>false</isActive>
                <label>6-Year Graded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>