force-app/main/default/objects/Proposal__c/fields/Profit_Sharing_Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing_Plan_Effective_Date__c</fullName>
    <description>Prior Year Profit Sharing Plan Effective Date</description>
    <formula>IF(
    ISPICKVAL(Prior_Year_Profit_Sharing_Contribution__c, &quot;Yes&quot;),
    DATE(YEAR(TODAY()) - 1, 1, 1),
    NULL
)</formula>
    <label>Profit Sharing Plan Effective Date</label>
    <type>Date</type>
</CustomField>