force-app/main/default/objects/Proposal__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description>Promo Code for sending to Paradigm through API</description>
    <inlineHelpText>Promo Code for sending to Paradigm through API</inlineHelpText>
    <label>Promo Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>