force-app/main/default/objects/Proposal__c/fields/Proposal_Id_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Id_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Id (18 Char)</label>
    <type>Text</type>
</CustomField>