force-app/main/default/objects/Proposal__c/fields/Proposal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Notes__c</fullName>
    <description>Add notes here.</description>
    <inlineHelpText>Add notes here.</inlineHelpText>
    <label>Proposal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>