force-app/main/default/objects/Proposal__c/fields/Provisions__c.field-meta.xml
<CustomField>
    <fullName>Provisions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For simply proposals.  Received through API, this indicates if a proposal is in the pricing/quote stage(false) or the provisions stage(true).</description>
    <label>Provisions</label>
    <type>Checkbox</type>
</CustomField>