force-app/main/default/objects/Proposal__c/fields/Publicly_Traded__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Traded__c</fullName>
    <description>Is the company a publicly traded company?</description>
    <inlineHelpText>Is the company a publicly traded company?</inlineHelpText>
    <label>Publicly Traded?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>