force-app/main/default/objects/Proposal__c/fields/Referrer_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Email__c</fullName>
    <label>Referrer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>