force-app/main/default/objects/Proposal__c/fields/Referrer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Phone__c</fullName>
    <formula>IF(
 ISPICKVAL(Referrer_Type__c ,&quot;Advisor&quot;),  Advisor_Contact__r.Phone , 
IF(
ISPICKVAL(Referrer_Type__c ,&quot;TPA&quot;),  TPA_Contact__r.Phone , &quot;&quot;
))</formula>
    <label>Referrer Phone</label>
    <type>Text</type>
</CustomField>