force-app/main/default/objects/Proposal__c/fields/Referrer_Type__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Type__c</fullName>
    <label>Referrer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>