force-app/main/default/objects/Proposal__c/fields/Representative_Number__c.field-meta.xml
<CustomField>
    <fullName>Representative_Number__c</fullName>
    <label>Representative Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>