force-app/main/default/objects/Proposal__c/fields/Restatement_Date__c.field-meta.xml
<CustomField>
    <fullName>Restatement_Date__c</fullName>
    <description>Date plan is restated from Ubiquity side.</description>
    <inlineHelpText>Date plan is restated from Ubiquity side.</inlineHelpText>
    <label>Restatement Date</label>
    <type>Date</type>
</CustomField>