force-app/main/default/objects/Proposal__c/fields/Safe_Harbor_Match_Determination_Period__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Match_Determination_Period__c</fullName>
    <label>Safe Harbor Match Determination Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Per Pay Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>