force-app/main/default/objects/Proposal__c/fields/Sallus_ID__c.field-meta.xml
<CustomField>
    <fullName>Sallus_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Sallus ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>