force-app/main/default/objects/Proposal__c/fields/Scheduled_Run__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Run__c</fullName>
    <label>Scheduled Run</label>
    <type>DateTime</type>
</CustomField>