force-app/main/default/objects/Proposal__c/fields/Secondary_Advisor_Info__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Advisor_Info__c</fullName>
    <label>Secondary Advisor Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>